treewide: remove rlocationpath workaround
It is apparently no longer necessary to hardcode these paths.

Closes: https://github.com/monogon-dev/monogon/issues/316
Change-Id: Ic7ff23266bfab3c4d32e54dfcbabf104c5f524c4
Reviewed-on: https://review.monogon.dev/c/monogon/+/4010
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/cloud/agent/takeover/e2e/BUILD.bazel
+++ b/cloud/agent/takeover/e2e/BUILD.bazel
@@ -14,8 +14,7 @@ go_test(
         "xCloudImagePath": "$(rlocationpath @debian_11_cloudimage//file )",
         "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:OVMF_VARS.fd )",
         "xOvmfCodePath": "$(rlocationpath //third_party/edk2:OVMF_CODE.fd )",
-        # TODO(tim): Hardcoded because of https://github.com/monogon-dev/monogon/issues/316
-        "xTakeoverPath": "_main/cloud/agent/takeover/takeover_bin_/takeover_bin",
+        "xTakeoverPath": "$(rlocationpath //cloud/agent/takeover )",
     },
     deps = [
         "//cloud/agent/api",
