--- a/cloud/agent/takeover/e2e/BUILD.bazel
+++ b/cloud/agent/takeover/e2e/BUILD.bazel
@@ -20,6 +20,7 @@ go_test(
         "//cloud/agent/api",
         "//osbase/fat32",
         "//osbase/freeport",
+        "//osbase/structfs",
         "@com_github_pkg_sftp//:sftp",
         "@io_bazel_rules_go//go/runfiles",
         "@org_golang_google_protobuf//proto",
