build/rust: move to build/toolchain/rust-efi
Change-Id: I57362142bb77bb9e09b51140f2c5a0ee4b6f597d
Reviewed-on: https://review.monogon.dev/c/monogon/+/4031
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -99,7 +99,7 @@ register_toolchains("@rust_toolchains//:all")
 # Protobuf Toolchains
 register_toolchains("@rules_rust_protobuf//:default_proto_toolchain")
 
-register_toolchains("//build/rust:prost_efi_toolchain")
+register_toolchains("//build/toolchain/rust-efi:prost_efi_toolchain")
 
 include("//build/bazel:rust.MODULE.bazel")
 
