--- a/metropolis/cli/takeover/e2e/BUILD.bazel
+++ b/metropolis/cli/takeover/e2e/BUILD.bazel
@@ -4,6 +4,7 @@ go_test(
     name = "e2e_test",
     srcs = ["main_test.go"],
     data = [
+        "//metropolis/cli/metroctl:metroctl_lite",
         "//metropolis/cli/takeover",
         "//metropolis/installer/test/testos:testos_bundle",
         "//third_party/edk2:OVMF_CODE.fd",
@@ -16,16 +17,14 @@ go_test(
         "xOvmfCodePath": "$(rlocationpath //third_party/edk2:OVMF_CODE.fd )",
         "xCloudImagePath": "$(rlocationpath @debian_11_cloudimage//file )",
         "xTakeoverPath": "$(rlocationpath //metropolis/cli/takeover )",
+        "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl:metroctl_lite )",
     },
     deps = [
-        "//go/net/ssh",
-        "//metropolis/proto/api",
-        "//metropolis/test/launch",
         "//osbase/fat32",
         "//osbase/freeport",
         "@io_bazel_rules_go//go/runfiles",
-        "@org_golang_google_protobuf//proto",
         "@org_golang_x_crypto//ssh",
+        "@org_golang_x_crypto//ssh/agent",
         "@org_golang_x_sys//unix",
     ],
 )
