osbase/build/fsspec: change order of arguments
We should always use the key as target path, as that's unique.

Change-Id: I09085448efda67cb6d1c0470fa15e4282b38e0d5
Reviewed-on: https://review.monogon.dev/c/monogon/+/4035
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -103,7 +103,7 @@ erofs_image(
         "//third_party:firmware",
     ],
     symlinks = {
-        "/ephemeral/machine-id": "/etc/machine-id",
+        "/etc/machine-id": "/ephemeral/machine-id",
     },
 )
 
