treewide: rename osbase/test/launch to osbase/test/qemu
Change-Id: Ia0775c462c8c909dc2080f01ff1f609b6d099179
Reviewed-on: https://review.monogon.dev/c/monogon/+/4046
Tested-by: Jenkins CI
Reviewed-by: Jan Schär <jan@monogon.tech>

--- a/osbase/test/ktest/BUILD.bazel
+++ b/osbase/test/ktest/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "source.monogon.dev/osbase/test/ktest",
     visibility = ["//visibility:private"],
-    deps = ["//osbase/test/launch"],
+    deps = ["//osbase/test/qemu"],
 )
 
 go_binary(
