--- a/metropolis/test/launch/BUILD.bazel
+++ b/metropolis/test/launch/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "cluster.go",
         "insecure_key.go",
         "launch.go",
+        "log.go",
         "metroctl.go",
         "prefixed_stdio.go",
         "swtpm.go",
@@ -50,7 +51,7 @@ go_library(
         "//metropolis/proto/common",
         "//metropolis/test/localregistry",
         "//osbase/logbuffer",
-        "//osbase/test/launch",
+        "//osbase/test/qemu",
         "@com_github_cenkalti_backoff_v4//:backoff",
         "@com_github_kballard_go_shellquote//:go-shellquote",
         "@io_bazel_rules_go//go/runfiles",
