--- a/metropolis/test/launch/cli/launch/BUILD.bazel
+++ b/metropolis/test/launch/cli/launch/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
     deps = [
         "//metropolis/proto/api",
         "//metropolis/test/launch",
-        "//osbase/test/launch",
+        "//osbase/test/qemu",
     ],
 )
 
