--- a/metropolis/test/nanoswitch/BUILD.bazel
+++ b/metropolis/test/nanoswitch/BUILD.bazel
@@ -16,7 +16,7 @@ go_library(
         "//osbase/logtree",
         "//osbase/socksproxy",
         "//osbase/supervisor",
-        "//osbase/test/launch",
+        "//osbase/test/qemu",
         "@com_github_google_nftables//:nftables",
         "@com_github_google_nftables//expr",
         "@com_github_insomniacslk_dhcp//dhcpv4",
