--- a/osbase/net/sshtakeover/BUILD.bazel
+++ b/osbase/net/sshtakeover/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "source.monogon.dev/osbase/net/sshtakeover",
     visibility = ["//visibility:public"],
     deps = [
+        "//osbase/structfs",
         "@com_github_pkg_sftp//:sftp",
         "@org_golang_x_crypto//ssh",
     ],
