cloud/agent: use new OS image format for install
This switches the Agent installation method to the new OS image format
based on OCI artifacts. OS images are now fetched from an OCI registry.

Change-Id: Icd59a2c808fd607b95d8aaa8e60022a27fd2d091
Reviewed-on: https://review.monogon.dev/c/monogon/+/4091
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/agent/BUILD.bazel
+++ b/cloud/agent/BUILD.bazel
@@ -15,7 +15,6 @@ go_library(
     deps = [
         "//cloud/agent/api",
         "//cloud/bmaas/server/api",
-        "//go/logging",
         "//metropolis/node/core/devmgr",
         "//metropolis/node/core/network",
         "//osbase/blockdev",
@@ -24,6 +23,8 @@ go_library(
         "//osbase/efivarfs",
         "//osbase/net/proto",
         "//osbase/nvme",
+        "//osbase/oci/osimage",
+        "//osbase/oci/registry",
         "//osbase/pki",
         "//osbase/scsi",
         "//osbase/smbios",
