--- a/.bazelrc
+++ b/.bazelrc
@@ -99,6 +99,7 @@ build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 
 # Use new-style C++ toolchain resolution.
 build --incompatible_enable_cc_toolchain_resolution
+build --experimental_cc_static_library
 
 # Use new-style proto toolchain resolution.
 build --incompatible_enable_proto_toolchain_resolution
