--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -51,6 +51,7 @@ go_library(
         "//osbase/logtree/proto",
         "//osbase/net/sshtakeover",
         "//osbase/oci",
+        "//osbase/oci/registry",
         "//osbase/structfs",
         "//version",
         "@com_github_adrg_xdg//:xdg",
