m/node/core/abloader: avoid unnecessary rebuilds
Previously, the abloader was rebuilt each time the stable status file
changed, even though the abloader contains no stamped info.

Change-Id: I8b36357082e3be8b241759e30b0d0d8be4613379
Reviewed-on: https://review.monogon.dev/c/monogon/+/4165
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/metropolis/node/core/abloader/BUILD.bazel
+++ b/metropolis/node/core/abloader/BUILD.bazel
@@ -6,6 +6,10 @@ rust_binary(
     srcs = ["main.rs"],
     edition = "2021",
     platform = "//build/platforms:efi_amd64",
+    # rust_binary depends on the status files by default, even if no stamp
+    # variables are used, which causes unnecessary rebuilds when the stable
+    # status file changes.
+    stamp = 0,
     target_compatible_with = [
         "@platforms//os:uefi",
     ],
