treewide: dynamically generate copyright line
A copyright line with hardcoded year was shown in various places of the
UI. Instead, take the year from the commit date.

Change-Id: I424d6c5b3aff34fe4479c37f30f9ea280b7eb4af
Reviewed-on: https://review.monogon.dev/c/monogon/+/4168
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -10,7 +10,11 @@ go_library(
         "//metropolis/node/core/abloader",  #keep
     ],
     importpath = "source.monogon.dev/metropolis/installer",
+    stampsrcs = ["//build:stabler_status"],
     visibility = ["//visibility:private"],
+    x_defs = {
+        "copyrightLine": "{STABLER_MONOGON_copyright}",
+    },
     deps = [
         "//osbase/blockdev",
         "//osbase/bringup",
