--- a/metropolis/node/core/tconsole/BUILD.bazel
+++ b/metropolis/node/core/tconsole/BUILD.bazel
@@ -11,7 +11,11 @@ go_library(
         "tconsole.go",
     ],
     importpath = "source.monogon.dev/metropolis/node/core/tconsole",
+    stampsrcs = ["//build:stabler_status"],
     visibility = ["//visibility:public"],
+    x_defs = {
+        "copyrightLine": "{STABLER_MONOGON_copyright}",
+    },
     deps = [
         "//metropolis/node/core/network",
         "//metropolis/node/core/roleserve",
